nginxDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-php
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-php
        # Image built from cloudbuild.yaml
        image: gcr.io/modern-photon-112115/nginx-php:beta-01
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - mountPath: "/mnt/data"
            name: www
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: podpvc
            readOnly: false
